--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,5 @@ matrix:
         - os: osx
           language: generic
           env: TOXENV=py33
+    install:
+        - python setup.py install
