--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: python
 matrix:
     include:
         - os: linux
+          python: 2.7
+          env: TOXENV=py27
+        - os: linux
           python: 3.2
           env: TOXENV=py32
         - os: linux
@@ -14,5 +17,5 @@ matrix:
         - os: osx
           language: generic
           env: TOXENV=py33
-    install:
-        - python setup.py install
+install:
+    - python setup.py install
