--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,9 @@ matrix:
         - os: osx
           language: generic
           env: TOXENV=py33
+
 install:
     - python setup.py install
+
+script:
+    - pytest
