--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,7 @@
 language: python
 
-python:
- - "3.6"
-
 install:
     - pip install -e .
 
-before_script:
-    - pwd
-    - ls
-    - python tests/test_import.py
-
 script:
-    - pytest tests/test_import.py
+    - pytest
