--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,15 @@ language: python
 install:
     - pip install -e .
 
+matrix:
+    include:
+        - os: linux
+          python: 3.2
+        - os: linux
+          python: 3.3
+        - os: osx
+          language: generic
+        - os: osx
+          language: generic
 script:
     - pytest
