--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,12 @@ matrix:
     include:
         - os: linux
           python: 2.7
-          
+
         - os: linux
           python: 3.6
-          
+
+        - os: linux
+          python: 3.8
+
 script:
     - python -m pytest
